[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Levels/ScriptedElements/Scripts/StaticBodyBlink.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32.5 )

[sub_resource type="PackedScene" id=2]
_bundled = {
"conn_count": 0,
"conns": PoolIntArray(  ),
"editable_instances": [  ],
"names": PoolStringArray( "Block", "StaticBody2D", "modulate", "position", "__meta__", "Icon", "Sprite", "texture", "CollisionShape2D", "CollisionShape2D", "position", "shape" ),
"node_count": 3,
"node_paths": [ NodePath("."), NodePath(".") ],
"nodes": PoolIntArray( -1, -1, 1, 0, -1, 3, 2, 0, 3, 1, 4, 2, 0, 1073741824, 0, 6, 5, -1, 1, 7, 3, 0, 1073741825, 0, 9, 8, -1, 2, 10, 4, 11, 5, 0 ),
"variants": [ Color( 0.764706, 0.00784314, 0.698039, 1 ), Vector2( 0, 1 ), {
"_edit_group_": true
}, ExtResource( 1 ), Vector2( 0, 0.5 ), SubResource( 1 ) ],
"version": 2
}

[sub_resource type="RectangleShape2D" id=3]

[node name="StaticBodyBlink" type="Node2D" groups=["Capturable"]]
script = ExtResource( 2 )
staticBody2D = SubResource( 2 )

[node name="OnTimer" type="Timer" parent="."]
autostart = true

[node name="OffTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 10, 10 )
shape = SubResource( 3 )

[connection signal="timeout" from="OnTimer" to="." method="_on_OnTimer_timeout"]
[connection signal="timeout" from="OffTimer" to="." method="_on_OffTimer_timeout"]
